include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_BINARY_DIR}/src)
set(CMAKE_C_FLAGS "-DUSE_MPI")
set(CMAKE_Fortran_FLAGS "-DUSE_MPI")

set(SAMPLE c_test.c f_test.F90)
foreach(name ${SAMPLE})
  get_filename_component(prefix ${name} NAME_WE)
  set(target_name ma_prof_example_${prefix})
  add_executable(${target_name} ${name})
  target_link_libraries(${target_name} ma_prof_lib)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${prefix})
endforeach(name)
